--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,7 +436,7 @@ IF(OTB_USE_EXTERNAL_GDAL)
 
   INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIRS})
 
-  FIND_LIBRARY(GDAL_LIBRARY NAMES gdal gdal1.6.0 gdal1.5.0 gdal1.4.0 gdal1.3.2 PATHS /usr/lib/gdal)
+  FIND_LIBRARY(GDAL_LIBRARY NAMES gdal gdal1.5.0 gdal1.4.0 gdal1.3.2 PATHS /usr/lib/gdal)
 
   IF (NOT GDAL_LIBRARY)
   MESSAGE(FATAL_ERROR
