--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -135,3 +135,5 @@ SET(OTB_USE_EXTERNAL_BOOST "@OTB_USE_EXTERNAL_BOOST@")
 
 # Internationalization
 SET(OTB_I18N "@OTB_I18N@")
+SET(OTB_LANG "@OTB_LANG@")
+SET(OTB_LANG_LOCATION "@OTB_LANG_LOCATION@")
