--- a/otbConfigure.h.in
+++ b/otbConfigure.h.in
@@ -67,3 +67,5 @@
 #cmakedefine OTB_USE_VISU_GUI
 
 #cmakedefine OTB_I18N
+#define OTB_LANG @OTB_LANG@
+#define OTB_LANG_LOCATION @OTB_LANG_LOCATION@
