TEST: add gistabletovectordatafilter test NEED gdal 1.6

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -845,10 +845,22 @@ otbGISTableToVectorDataFilterNew
 ADD_TEST(coTvLabelMapToGISTableFilter ${COMMON_TESTS10}
 otbLabelMapToGISTableFilter
 ${INPUTDATA}/rcc8_mire1.png
-labelmaptogis_test 
+labelmaptogis_test_table 
 orfeotoolbox_test_user
 Bidfeud0
 )
+
+
+#need gdal 1.6 for POSTGIS tables connection via OGR string
+ADD_TEST(coTvGISTableToVectorDataFilter ${COMMON_TESTS10}
+otbGISTableToVectorDataFilter
+${TEMP}/gistabletovectordatafilter.shp
+orfeotoolbox_test
+labelmaptogis_test_table
+orfeotoolbox_test_user
+Bidfeud0
+)
+
 
 ENDIF(OTB_USE_PQXX)
 
@@ -1064,6 +1076,7 @@ otbLabelMapToGISTableFilterNew.cxx
 otbGISTableToLabelMapFilterNew.cxx
 otbGISTableToVectorDataFilterNew.cxx
 otbLabelMapToGISTableFilter.cxx
+otbGISTableToVectorDataFilter.cxx
 )
 ENDIF(OTB_USE_PQXX)
 
