--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -575,7 +575,7 @@ ENDIF(OTB_USE_EXTERNAL_GDAL)
 FIND_PACKAGE(Gettext)
 IF(GETTEXT_FOUND)
   SET(OTB_I18N 1)
-  SET(OTB_LANG "en" CACHE STRING "OTB internationalization (Experimental)")#might want to get the Locale from the system here
+  SET(OTB_LANG $ENV{LANG} CACHE STRING "OTB internationalization (Experimental)")#might want to get the Locale from the system here
   SET(OTB_LANG_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/I18n)
   SUBDIRS(I18n)
 ELSE(GETTEXT_FOUND)
