--- a/Examples/Visu/CMakeLists.txt
+++ b/Examples/Visu/CMakeLists.txt
@@ -2,6 +2,6 @@ PROJECT(VisuExamples)
 INCLUDE_REGULAR_EXPRESSION("^.*$")
 
 ADD_EXECUTABLE(VisuExample1 VisuExample1.cxx )
-TARGET_LINK_LIBRARIES(VisuExample1 OTBVisu OTBGui OTBIO OTBCommon ${OTB_VISU_GUI_LIBRARIES} OTBTesting)
+TARGET_LINK_LIBRARIES(VisuExample1 OTBVisu OTBGui OTBIO OTBCommon ${OTB_VISU_GUI_LIBRARIES})
 
 
