--- a/Testing/Code/IO/CMakeLists.txt
+++ b/Testing/Code/IO/CMakeLists.txt
@@ -1982,102 +1982,135 @@ ADD_TEST(ioTvTerraSarImageMetadataInterface ${IO_TESTS18}
 
 
 ADD_TEST(ioTvImageKeywordlistSpot5 ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistSpot5.txt
          ${TEMP}/ioTvImageKeywordlistSpot5.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistSpot5.txt
+         ${TEMP}/ioTvImageKeywordlistSpot5_saveState_loadState.txt
 --ignore-lines-with 1 support_data.metadata_file
     otbImageKeywordlist
          ${LARGEDATA}/SPOT5/TEHERAN/IMAGERY.TIF
          ${TEMP}/ioTvImageKeywordlistSpot5.txt
+         ${TEMP}/ioTvImageKeywordlistSpot5_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistQuickbird ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistQuickbird.txt
          ${TEMP}/ioTvImageKeywordlistQuickbird.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistQuickbird.txt
+         ${TEMP}/ioTvImageKeywordlistQuickbird_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/QUICKBIRD/TOULOUSE/000000128955_01_P001_PAN/02APR01105228-P1BS-000000128955_01_P001.TIF
          ${TEMP}/ioTvImageKeywordlistQuickbird.txt
+         ${TEMP}/ioTvImageKeywordlistQuickbird_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistIkonos ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistIkonos.txt
          ${TEMP}/ioTvImageKeywordlistIkonos.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistIkonos.txt
+         ${TEMP}/ioTvImageKeywordlistIkonos_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/IKONOS/BLOSSEVILLE/po_2619900_pan_0000000.tif
          ${TEMP}/ioTvImageKeywordlistIkonos.txt
+         ${TEMP}/ioTvImageKeywordlistIkonos_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistRapidEye ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistRapidEye.txt
          ${TEMP}/ioTvImageKeywordlistRapidEye.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistRapidEye.txt
+         ${TEMP}/ioTvImageKeywordlistRapidEye_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/RAPIDEYE/level1B/2008-12-25T005918_RE3_1B-NAC_397971_12345_band3.ntf
          ${TEMP}/ioTvImageKeywordlistRapidEye.txt
+         ${TEMP}/ioTvImageKeywordlistRapidEye_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistEnvisatAsar ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistEnvisatAsar.txt
          ${TEMP}/ioTvImageKeywordlistEnvisatAsar.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistEnvisatAsar.txt
+         ${TEMP}/ioTvImageKeywordlistEnvisatAsar_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/ENVISAT_ASAR_SCENE01/ASA_APS_1PNDPA20030821_7713.N1
          ${TEMP}/ioTvImageKeywordlistEnvisatAsar.txt
+         ${TEMP}/ioTvImageKeywordlistEnvisatAsar_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistAlosPalsar ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistAlosPalsar.txt
          ${TEMP}/ioTvImageKeywordlistAlosPalsar.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistAlosPalsar.txt
+         ${TEMP}/ioTvImageKeywordlistAlosPalsar_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/PALSAR/200801280007/l1data/VOL-ALPSRP037120700-H1.1__A
          ${TEMP}/ioTvImageKeywordlistAlosPalsar.txt
+         ${TEMP}/ioTvImageKeywordlistAlosPalsar_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistRadarSat1 ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistRadarSat1.txt
          ${TEMP}/ioTvImageKeywordlistRadarSat1.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistRadarSat1.txt
+         ${TEMP}/ioTvImageKeywordlistRadarSat1_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/RADARSAT1/GOMA/SCENE01/DAT_01.001
          ${TEMP}/ioTvImageKeywordlistRadarSat1.txt
+         ${TEMP}/ioTvImageKeywordlistRadarSat1_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistRadarSat2 ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistRadarSat2.txt
          ${TEMP}/ioTvImageKeywordlistRadarSat2.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistRadarSat2.txt
+         ${TEMP}/ioTvImageKeywordlistRadarSat2_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/RADARSAT2/ALTONA/Fine_Quad-Pol_Dataset/PK6621_DK406_FQ9_20080405_124900_HH_VV_HV_VH_SLC_Altona/product.xml
          ${TEMP}/ioTvImageKeywordlistRadarSat2.txt
+         ${TEMP}/ioTvImageKeywordlistRadarSat2_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistTerraSarX ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX.txt
          ${TEMP}/ioTvImageKeywordlistTerraSarX.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/TERRASARX/dims/TSX-1.SAR.L1B/TSX1_SAR__SSC/TSX1_SAR__SSC.xml
          ${TEMP}/ioTvImageKeywordlistTerraSarX.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistTerraSarX_Upsala ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX_Upsala.txt
          ${TEMP}/ioTvImageKeywordlistTerraSarX_Upsala.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX_Upsala.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_Upsala_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/TERRASARX/UPSALA_GLACIER/TSX1_SAR__MGD/TSX1_SAR__MGD.xml
          ${TEMP}/ioTvImageKeywordlistTerraSarX_Upsala.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_Upsala_saveState_loadState.txt
 )
 ADD_TEST(ioTvImageKeywordlistTerraSarX_Toronto ${IO_TESTS18}
-  --compare-ascii ${NOTOL}
+  --compare-n-ascii ${NOTOL} 2
          ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX_Toronto.txt
          ${TEMP}/ioTvImageKeywordlistTerraSarX_Toronto.txt
+         ${BASELINE_FILES}/ioTvImageKeywordlistTerraSarX_Toronto.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_Toronto_saveState_loadState.txt
     otbImageKeywordlist
          ${LARGEDATA}/TERRASARX/TORONTO/TSX1_SAR__SSC/TSX1_SAR__SSC.xml
          ${TEMP}/ioTvImageKeywordlistTerraSarX_Toronto.txt
+         ${TEMP}/ioTvImageKeywordlistTerraSarX_Toronto_saveState_loadState.txt
 )
 
 ADD_TEST(ioTvImageKeywordlistErs ${IO_TESTS18}
@@ -2087,6 +2120,7 @@ ADD_TEST(ioTvImageKeywordlistErs ${IO_TESTS18}
     otbImageKeywordlist
          ${LARGEDATA}/SAR_ERS2_SLCI_SCENE1/DAT_01.001
          ${TEMP}/ioTvImageKeywordlistErs.txt
+         ${TEMP}/ioTvImageKeywordlistErs_saveState_loadState.txt
 )
 
 ENDIF(OTB_DATA_USE_LARGEINPUT)
