ENH: Add TRY_COMPILE when External Boost library is selected. If the compilation aborted, then the internal boost library is used, and OTB_USE_EXTERNAL_BOOST cmake value is force to OFF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -435,6 +435,20 @@ ENDIF(OTB_USE_MAPNIK)
 
 IF(OTB_USE_EXTERNAL_BOOST)
   FIND_PACKAGE(Boost)
+
+  TRY_COMPILE(BOOST_IS_COMPLETE
+  ${CMAKE_CURRENT_BINARY_DIR}/CMake
+  ${CMAKE_CURRENT_SOURCE_DIR}/CMake/otbTestCompileBoost.cxx
+  CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:PATH=${Boost_INCLUDE_DIR}" 
+  OUTPUT_VARIABLE OUTPUT)
+  IF(BOOST_IS_COMPLETE)
+    MESSAGE(STATUS "Testing external Boost library    -- yes")
+  ELSE(BOOST_IS_COMPLETE)
+    MESSAGE(STATUS "Testing external Boost library    -- no")
+    MESSAGE(STATUS "Force the OTB_USE_EXTERNAL_BOOST value to OFF.")
+    SET(OTB_USE_EXTERNAL_BOOST OFF)
+  ENDIF(BOOST_IS_COMPLETE)
+
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 ENDIF(OTB_USE_EXTERNAL_BOOST)
 
