ENH: Add TRY_COMPILE when External Boost library is selected. If the compilation aborted, then the internal boost library is used, and OTB_USE_EXTERNAL_BOOST cmake value is force to OFF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -442,9 +442,9 @@ IF(OTB_USE_EXTERNAL_BOOST)
   CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:PATH=${Boost_INCLUDE_DIR}" 
   OUTPUT_VARIABLE OUTPUT)
   IF(BOOST_IS_COMPLETE)
-    MESSAGE(ERROR "Testing external Boost library    -- yes")
+    MESSAGE(STATUS "Testing external Boost library    -- yes")
   ELSE(BOOST_IS_COMPLETE)
-    MESSAGE(ERROR "Testing external Boost library    -- no")
+    MESSAGE(STATUS "Testing external Boost library    -- no")
     MESSAGE(STATUS "Force the OTB_USE_EXTERNAL_BOOST value to OFF.")
     SET(OTB_USE_EXTERNAL_BOOST OFF CACHE BOOL  "Use an outside build of Boost." FORCE )
   ENDIF(BOOST_IS_COMPLETE)
