--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -442,11 +442,11 @@ IF(OTB_USE_EXTERNAL_BOOST)
   CMAKE_FLAGS "-DINCLUDE_DIRECTORIES:PATH=${Boost_INCLUDE_DIR}" 
   OUTPUT_VARIABLE OUTPUT)
   IF(BOOST_IS_COMPLETE)
-    MESSAGE(STATUS "Testing external Boost library    -- yes")
+    MESSAGE(ERROR "Testing external Boost library    -- yes")
   ELSE(BOOST_IS_COMPLETE)
-    MESSAGE(STATUS "Testing external Boost library    -- no")
+    MESSAGE(ERROR "Testing external Boost library    -- no")
     MESSAGE(STATUS "Force the OTB_USE_EXTERNAL_BOOST value to OFF.")
-    SET(OTB_USE_EXTERNAL_BOOST OFF)
+    SET(OTB_USE_EXTERNAL_BOOST OFF CACHE BOOL  "Use an outside build of Boost." FORCE )
   ENDIF(BOOST_IS_COMPLETE)
 
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
