TEST: add test checking the validity of the test system

--- a/Testing/Code/TestSystem/CMakeLists.txt
+++ b/Testing/Code/TestSystem/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(EPS 0.001)
 
 SET(TESTSYSTEM_TESTS ${CXX_TEST_PATH}/otbTestSystemTests)
 
+#Test a basic ascii comparison
 ADD_TEST(tsTvCompareAscii ${TESTSYSTEM_TESTS}
    --compare-ascii ${NOTOL}
        ${TEMP}/tsTvCompareAsciiRef.txt
@@ -28,6 +29,7 @@ ADD_TEST(tsTvCompareAscii ${TESTSYSTEM_TESTS}
        ${TEMP}/tsTvCompareAsciiTest.txt
   )
 
+#make sure that it fails when it has to.. (baseline shorter than test)
 ADD_TEST(tsTvCompareAscii2 ${TESTSYSTEM_TESTS}
    --compare-ascii ${NOTOL}
        ${TEMP}/tsTvCompareAsciiRef2.txt
@@ -39,11 +41,46 @@ ADD_TEST(tsTvCompareAscii2 ${TESTSYSTEM_TESTS}
 
 SET_TESTS_PROPERTIES(tsTvCompareAscii2 PROPERTIES WILL_FAIL true)
 
+#with reverse order (test shorter than baseline)
+ADD_TEST(tsTvCompareAscii2reverse ${TESTSYSTEM_TESTS}
+   --compare-ascii ${NOTOL}
+       ${TEMP}/tsTvCompareAsciiRef2reverse.txt
+       ${TEMP}/tsTvCompareAsciiTest2reverse.txt
+     otbCompareAsciiTests2
+       ${TEMP}/tsTvCompareAsciiTest2reverse.txt
+       ${TEMP}/tsTvCompareAsciiRef2reverse.txt
+  )
+
+SET_TESTS_PROPERTIES(tsTvCompareAscii2reverse PROPERTIES WILL_FAIL true)
+
+#ignoring the line order
+ADD_TEST(tsTvCompareAscii3 ${TESTSYSTEM_TESTS}
+   --ignore-order --compare-ascii ${NOTOL}
+       ${TEMP}/tsTvCompareAsciiRef3.txt
+       ${TEMP}/tsTvCompareAsciiTest3.txt
+     otbCompareAsciiTests3
+       ${TEMP}/tsTvCompareAsciiRef3.txt
+       ${TEMP}/tsTvCompareAsciiTest3.txt
+  )
+
+#fails if the line order is not ignored
+ADD_TEST(tsTvCompareAscii3order ${TESTSYSTEM_TESTS}
+   --compare-ascii ${NOTOL}
+       ${TEMP}/tsTvCompareAsciiRef3order.txt
+       ${TEMP}/tsTvCompareAsciiTest3order.txt
+     otbCompareAsciiTests3
+       ${TEMP}/tsTvCompareAsciiRef3order.txt
+       ${TEMP}/tsTvCompareAsciiTest3order.txt
+  )
+
+SET_TESTS_PROPERTIES(tsTvCompareAscii3order PROPERTIES WILL_FAIL true)
+
 # -------       CXX source files -----------------------------------
 SET(TESTSYSTEM_SRCS
 otbTestSystemTests.cxx
 otbCompareAsciiTests.cxx
 otbCompareAsciiTests2.cxx
+otbCompareAsciiTests3.cxx
 )
 
 INCLUDE_DIRECTORIES(${OTB_SOURCE_DIR}/Testing/Code)
